<resources>
    <string name="app_name">PeluchitosEnterprise</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="agregar">Agregar</string>
    <string name="buscar">Buscar</string>
    <string name="eliminar">Eliminar</string>
    <string name="inventario">Ver inventario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Agregue un Peluchito</string>
    <string name="name">Nombre:</string>
    <string name="id">ID:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="precio">Precio:</string>
    <string name="search">Encuentre un Peluchito</string>
    <string name="delete">Elimine un Peluchito</string>
    <string name="Agregar">Agregar</string>
    <string name="Buscar">Buscar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Inventario">Ver inventario</string>
</resources>
